<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/guideline9">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/H_logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingBottom="10dp"
            android:src="@mipmap/logo_h_round"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/apellido"
                    android:inputType="text"
                    app:layout_constraintBottom_toTopOf="@+id/DNI"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/nombre" />

                <EditText
                    android:id="@+id/DNI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/documento"
                    android:inputType="text"
                    app:layout_constraintBottom_toTopOf="@+id/edad"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/apellido"/>

                <EditText
                    android:id="@+id/edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/edad"
                    android:inputType="number"
                    app:layout_constraintBottom_toTopOf="@+id/peso"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/DNI" />

                <EditText
                    android:id="@+id/peso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/peso"
                    android:inputType="text"
                    app:layout_constraintBottom_toTopOf="@+id/obra_social"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/edad"/>

                <EditText
                    android:id="@+id/obra_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/obra_social"
                    android:inputType="text"
                    app:layout_constraintBottom_toTopOf="@+id/email"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/peso"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toTopOf="@+id/password"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/obra_social" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@+id/confirm_password"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/confirmar_contrasena"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@+id/login"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/registrarse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    app:backgroundTint="@color/button_color"
                    app:layout_constraintBottom_toBottomOf="@+id/guideline8"
                    app:layout_constraintEnd_toEndOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>